# yrt-pet

./: .gitignore  CUDA_TO_BACKEND_INVENTORY.md  CUDA_TO_METAL_RECONSTRUCTION_READINESS.md  METAL_RECONSTRUCTION_OPT_IN_PLAN.md  README.md
yrt-pet/: .clang-format  CMakeLists.txt  pyproject.toml  temp_OSEM.cpp
yrt-pet/executables/: ArgumentReader.cpp  ArgumentReader.hpp  CMakeLists.txt  PluginOptionsHelper.cpp  PluginOptionsHelper.hpp  ReconstructionConfig.cpp  ReconstructionConfig.hpp
yrt-pet/executables/conversion/: ConvertToHistogram.cpp  ConvertToListModeLUT.cpp  ConvertToLowCountListModeLUT.cpp  CumulateHistograms.cpp  Histogram3DToListMode.cpp  MakeDownsampledSinogram.cpp  PopulateScatterSpace.cpp
yrt-pet/executables/kernel/: BuildK.cpp
yrt-pet/executables/motion/: PostReconMotionCorrection.cpp
yrt-pet/executables/recon/: Backproject.cpp  EstimateScatter.cpp  ForwardProject.cpp  PrepareAdditiveCorrection.cpp  Reconstruct.cpp
yrt-pet/executables/scatter/: PrepareScatterCorrection.cpp
yrt-pet/executables/utils/: AccumulateToDetectors.cpp  DetMaskToHistogram3D.cpp  MetalBackendSample.cpp  MetalOsemCompare.cpp  MetalProjectorCompare.cpp  MetalPsfCompare.cpp  MetalSmoke.cpp  PostReconMotionCorrection.cpp
yrt-pet/include/datastruct/: ArgumentDefinition.hpp  IO.hpp  (+1 more)
yrt-pet/integration_tests/: CMakeLists.txt  _test_operators_lr.py  helper.py  test_datastruct.py  test_operators_lr.py  test_recon.py  test_recon_lr.py
yrt-pet/src/: CMakeLists.txt  pybind11.cpp
yrt-pet/unit_tests/: CMakeLists.txt  test_datastruct.py  test_utils.cpp  test_utils.hpp
(+481 files in other folders)
